--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,7 +72,7 @@
             </section>
             <section class="weather-forcast">
                 <h6>Weather Forecast</h6>
-                <div id="forecast-weather"></div>
+                <div id="forecast-weather" class="weather-forcast"></div>
             </section>
         </div>
         <div class="rand-store" id="business-cards">
