--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,9 +7,9 @@
     <meta name="description" content="WDD 231 Chamber of Commerce Project - Home Page">
     <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I">
     <meta name="author" content="Michael Anderson">
-    <title>WDD 231- Brigham City Chamber of Commerce</title>
+    <title>WDD 231- Brigham City Chamber of Commerce - Join Page</title>
     <!-- Social Media Meta Tags -->
-    <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Home - Michael Anderson">
+    <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Join- Michael Anderson">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/chamber/images/thumbnail.webp">
     <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/chamber/directory.html">
@@ -95,13 +95,13 @@
                         </fieldset>
                         <fieldset>
                             <legend>* Membership Level</legend>
-                            <label for="nonprofit"><input type="radio" id="nonprofit" name="nonprofit" value="nonprofit"
-                                    required>Non Profit</label>
-                            <label for="bronze"><input type="radio" id="bronze" name="bronze" value="bronze"
+                            <label for="nonprofit"><input type="radio" id="nonprofit" name="membership-level"
+                                    value="nonprofit" required>Non Profit</label>
+                            <label for="bronze"><input type="radio" id="bronze" name="membership-level" value="bronze"
                                     required>Bronze</label>
-                            <label for="silver"><input type="radio" id="silver" name="silver" value="silver"
+                            <label for="silver"><input type="radio" id="silver" name="membership-level" value="silver"
                                     required>Silver</label>
-                            <label for="gold"><input type="radio" id="gold" name="gold" value="gold"
+                            <label for="gold"><input type="radio" id="gold" name="membership-level" value="gold"
                                     required>Gold</label>
                         </fieldset>
                         <fieldset>
