--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -45,7 +45,7 @@
 
     <main>
         <h1>Submission Successfull!</h1>
-        <div id="results"></div>
+        <div id="results" class="results"></div>
     </main>
 
     <footer>
