--- a/chamber/join.html
+++ b/chamber/join.html
@@ -54,7 +54,7 @@
         <div class="main-container">
             <div class="application-container">
                 <h1>Membership Application</h1>
-                <section class="application-form">
+                <div class="application-form">
                     <form method="get" action="thankyou.html" class="application">
                         <!-- Name-->
                         <fieldset>
@@ -111,8 +111,9 @@
                         </fieldset>
                         <label for="submit"><input type="submit" id="submit" value="Send Application"></label>
                     </form>
+                </div>
             </div>
-            </section>
+
             <div class="membership-container">
                 <section class="membership-level1">
                     <!-- Non Profit Membership-->
