--- a/chamber/join.html
+++ b/chamber/join.html
@@ -108,6 +108,7 @@
                             <legend>Business/Organization Description</legend>
                             <label for="description"><textarea id="description" name="description" rows="6" cols="50"
                                     title="Describe your business or organization here">Enter Description Here</textarea></label>
+                            <label for="timestamp"><input type="hidden" name="timestamp">TheDateAndTime</label>
                         </fieldset>
                         <label for="submit"><input type="submit" id="submit" value="Send Application"></label>
                     </form>
