--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,7 +55,7 @@
             <div class="application-container">
                 <h1>Membership Application</h1>
                 <div class="application-form">
-                    <form method="get" action="thankyou.html" class="application">
+                    <form method="get" action="thankyou.html" class="application" id="application-form-main">
                         <!-- Name-->
                         <fieldset>
                             <legend>Name and Title</legend>
@@ -108,8 +108,8 @@
                             <legend>Business/Organization Description</legend>
                             <label for="description"><textarea id="description" name="description" rows="6" cols="50"
                                     title="Describe your business or organization here">Enter Description Here</textarea></label>
-                            <label for="timestamp"><input type="hidden" id="timeStamp"
-                                    name="timestamp">TheDateAndTime</label>
+                            <label for="timestamp"><input type="hidden" id="timestamp" value="" name="timestamp"
+                                    readonly></label>
                         </fieldset>
                         <label for="submit"><input type="submit" id="submit" value="Send Application"></label>
                     </form>
