fixing identified missing elements

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -125,6 +125,7 @@
                         <h5>Organization/Business Recognition</h5>
                         <h5>Listed on Chamber Page</h5>
                         <h5>News Letters</h5>
+                        <h5>No Cost</h5>
                         <button id="dialogCloseButton1">close</button>
                     </dialog>
                     <div class="shimmer1"></div>
@@ -139,6 +140,7 @@
                         <h5>Listed on Chamber Page</h5>
                         <h5>News Letters</h5>
                         <h5>Dedicated Parade Slot</h5>
+                        <h5>Cost: $50</h5>
                         <button id="dialogCloseButton2">close</button>
                     </dialog>
                     <div class="shimmer2"></div>
@@ -154,6 +156,7 @@
                         <h5>News Letters</h5>
                         <h5>Dedicated Parade Slot</h5>
                         <h5>Dedicated Peach Days Booth</h5>
+                        <h5>Cost: $100</h5>
                         <button id="dialogCloseButton3">close</button>
                     </dialog>
                     <div class="shimmer3"></div>
@@ -169,6 +172,7 @@
                         <h5>Dedicated Parade Slot</h5>
                         <h5>Dedicated Peach Days Booth</h5>
                         <h5>Commerce Ball Recognition</h5>
+                        <h5>Cost: $200</h5>
                         <button id="dialogCloseButton4">close</button>
                     </dialog>
                     <div class="shimmer4"></div>
