fixing identified errors

--- a/w05_activities/website-plan.html
+++ b/w05_activities/website-plan.html
@@ -37,17 +37,29 @@
         </section>
         <section>
             <h2>Site Colors</h2>
-            <section class="heading-bg-color">Color 1 - Headings/tabs background color: #415E40<p>⬜</p>
+            <section class="heading-bg-color">
+                <h3>Color 1 - Headings/tabs background color: #415E40</h3>
+                <p>⬜</p>
             </section>
-            <section class="heading-tab-text">Color 2 - Headings/tabs text color: #ffffff<p>⬜</p>
+            <section class="heading-tab-text">
+                <h3>Color 2 - Headings/tabs text color: #ffffff</h3>
+                <p>⬜</p>
             </section>
-            <section class="decorative">Color 3 - Decorative color: #4C5E40<p>⬜</p>
+            <section class="decorative">
+                <h3>Color 3 - Decorative color: #4C5E40</h3>
+                <p>⬜</p>
             </section>
-            <section class="dark-decorative">Color 4 - Alternative decorative color: #344e41<p>⬜</p>
+            <section class="dark-decorative">
+                <h3>Color 4 - Alternative decorative color: #344e41</h3>
+                <p>⬜</p>
             </section>
-            <section class="main-bg-color">Color 5 - Main background color: #eff0ef<p>⬜</p>
+            <section class="main-bg-color">
+                <h3>Color 5 - Main background color: #eff0ef</h3>
+                <p>⬜</p>
             </section>
-            <section class="bar-color">Color 6 - Navigation bar color: #333<p>⬜</p>
+            <section class="bar-color">
+                <h3>Color 6 - Navigation bar color: #333</h3>
+                <p>⬜</p>
             </section>
         </section>
         <section>
