--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,7 @@
                         <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="directory.html" title="Directory">Directory</a></li>
                         <li><a href="#" class="active" title="join">Join</a></li>
-                        <li><a href="#" title="discover">Discover</a></li>
+                        <li><a href="discover.html" title="discover">Discover</a></li>
                     </ul>
                 </nav>
             </div>
