--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
                         <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="#" class="active" title="Directory">Directory</a></li>
                         <li><a href="join.html" title="join">Join</a></li>
-                        <li><a href="#" title="discover">Discover</a></li>
+                        <li><a href="discover.html" title="discover">Discover</a></li>
                     </ul>
                 </nav>
             </div>
