--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
                         <li><a href="#" class="active" title="home">Home</a></li>
                         <li><a href="directory.html" title="Directory">Directory</a></li>
                         <li><a href="join.html" title="join">Join</a></li>
-                        <li><a href="#" title="discover">Discover</a></li>
+                        <li><a href="discover.html" title="discover">Discover</a></li>
                     </ul>
                 </nav>
             </div>
