--- a/final_project/index.html
+++ b/final_project/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 231 Chamber of Commerce Project - Home Page">
-    <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I">
+    <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I, Pioneer Park">
     <meta name="author" content="Michael Anderson">
-    <title>WDD 231- Brigham City Chamber of Commerce</title>
+    <title>Pioneer Park</title>
     <!-- Social Media Meta Tags -->
-    <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Home - Michael Anderson">
+    <meta property="og:title" content="WDD 231 - Final Project| Pioneer Park | - Home - Michael Anderson">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/chamber/images/thumbnail.webp">
     <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/chamber/directory.html">
@@ -33,8 +33,8 @@
     <header>
         <div class="header-container">
             <div class="title-container">
-                <h1>Brigham City</h1>
-                <h2 class="subtitle">Chamber of Commerce</h2>
+                <h1>Pioneer Park</h1>
+                <h2 class="subtitle">Brigham City</h2>
                 <img class="flag" src="images/flag.webp" alt="flag" width="100">
             </div>
             <a id="menu" href="#"></a>
@@ -52,6 +52,32 @@
     </header>
 
     <main>
+        <div class="hero-container"><img class="hero" src="images/hero.webp" alt="brigham city court house"
+                width="1920">
+            <ul class="navigation"></ul>
+            <li><a href="#" title="call to action">Claim your Free Dinner</a></li>
+        </div>
+        <div class="home-info">
+            <section class="events">
+                <h6>Events</h6>
+            </section>
+            <section class="current-weather">
+                <h6>Current Weather</h6>
+                <div class="weather-container">
+                    <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="75">
+                    <div id="current-weather">
+                        <!-- weather data -->
+                    </div>
+                </div>
+            </section>
+            <section class="weather-forcast">
+                <h6>Weather Forecast</h6>
+                <div id="forecast-weather" class="weather-forcast"></div>
+            </section>
+        </div>
+        <div class="rand-store" id="business-cards">
+            <!-- business data -->
+        </div>
     </main>
 
     <footer>
