--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,6 +52,32 @@
     </header>
 
     <main>
+        <div class="hero-container"><img class="hero" src="images/hero.webp" alt="brigham city court house"
+                width="1920">
+            <ul class="navigation"></ul>
+            <li><a href="#" title="call to action">Claim your Free Dinner</a></li>
+        </div>
+        <div class="home-info">
+            <section class="events">
+                <h6>Events</h6>
+            </section>
+            <section class="current-weather">
+                <h6>Current Weather</h6>
+                <div class="weather-container">
+                    <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="75">
+                    <div id="current-weather">
+                        <!-- weather data -->
+                    </div>
+                </div>
+            </section>
+            <section class="weather-forcast">
+                <h6>Weather Forecast</h6>
+                <div id="forecast-weather" class="weather-forcast"></div>
+            </section>
+        </div>
+        <div class="rand-store" id="business-cards">
+            <!-- business data -->
+        </div>
     </main>
 
     <footer>
