--- a/final_project/index.html
+++ b/final_project/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 231 Chamber of Commerce Project - Home Page">
+    <meta name="description" content="WDD 231 Pioneer Park Final Project - Home Page">
     <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I, Pioneer Park">
     <meta name="author" content="Michael Anderson">
     <title>Pioneer Park</title>
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <!--Styles Links-->
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/directory.css">
+    <link rel="stylesheet" href="styles/small.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Kanit:wght@100;300;400&display=swap"
@@ -26,6 +26,8 @@
     <script defer src="scripts/index.js"></script>
     <script defer src="scripts/weather.js"></script>
     <script defer src="scripts/forecast.js"></script>
+    <script defer src="scripts/header.js"></script>
+    <script defer src="scripts/footer.js"></script>
 
 </head>
 
@@ -52,42 +54,38 @@
     </header>
 
     <main>
-        <div class="hero-container"><img class="hero" src="images/hero.webp" alt="brigham city court house"
-                width="1920">
-            <ul class="navigation"></ul>
-            <li><a href="#" title="call to action">Claim your Free Dinner</a></li>
+        <div class="hero-container"><img class="hero" src="images/hero.webp" alt="Pioneer Park" width="1920">
         </div>
         <div class="home-info">
-            <section class="events">
-                <h6>Events</h6>
-            </section>
-            <section class="current-weather">
-                <h6>Current Weather</h6>
-                <div class="weather-container">
-                    <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="75">
-                    <div id="current-weather">
-                        <!-- weather data -->
+            <div class="weather-info">
+                <section class="current-weather">
+                    <h2>Current Weather</h2>
+                    <div class="weather-container">
+                        <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="75">
+                        <div id="current-weather">
+                            <!-- weather data -->
+                        </div>
                     </div>
-                </div>
-            </section>
-            <section class="weather-forcast">
-                <h6>Weather Forecast</h6>
-                <div id="forecast-weather" class="weather-forcast"></div>
+                </section>
+                <section class="weather-forcast">
+                    <h2>Weather Forecast</h2>
+                    <div id="forecast-weather" class="weather-forcast"></div>
+                </section>
+            </div>
+            <section class="events">
+                <h2>Events</h2>
             </section>
         </div>
-        <div class="rand-store" id="business-cards">
-            <!-- business data -->
-        </div>
+
     </main>
 
     <footer>
         <div class="footer-container">
-            <h3>Brigham City Chamber of Commerce</H3>
-            <p class="contact-info">10 S Main Steet</p>
+            <h3>Rees Pioneer Park</H3>
+            <p class="contact-info">800 W Forest ST</p>
             <p class="contact-info">Brigham City, UT 84302</p>
-            <p class="contact-info">Brigham City, UT</p>
-            <p class="contact-info">info@brighamccinfo.org</p>
-            <p class="contact-info">(435) 723-3741</p>
+            <p class="contact-info">https://www.bcutah.gov/page/parks-and-boweries/</p>
+            <p class="contact-info">Rees Pioneer Park (435) 734-6615</p>
         </div>
         <div class="footer-container">
             <nav class="social-links">
@@ -103,9 +101,9 @@
             </nav>
         </div>
         <div class="footer-container">
-            <p class="foot-text">WDD231 Class Project</p>
+            <p class="foot-text">WDD231 Final Project Project</p>
             <p class="foot-text">Michael Anderson</p>
-            <p class="foot-text">© <span id="copyright-year"></span> Brigham City Chamber of Commerce
+            <p class="foot-text">© <span id="copyright-year"></span> Rees Pioneer Park
                 <img class="flag-footer" src="images/flag.webp" alt="flag" width="45">
             </p>
             <p id="lastModified">Last Modified: </p>
