--- a/final_project/index.html
+++ b/final_project/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-        <div class="hero-container"><img class="hero" src="images/hero.webp" alt="Pioneer Park" width="1920">
+        <div class="hero-container"><img class="hero" src="images/hero-small.webp" alt="Pioneer Park" width="1600">
         </div>
         <div class="home-info">
             <div class="weather-info">
