--- a/final_project/activities.html
+++ b/final_project/activities.html
@@ -26,7 +26,7 @@
     <!--Script Links-->
     <script defer src="scripts/header.js"></script>
     <script defer src="scripts/footer.js"></script>
-    <script defer src="activities.js"></script>
+    <script src="scripts/activities.js" type="module"></script>
 
 </head>
 
@@ -54,8 +54,8 @@
 
     <main>
         <div class="buttons-container">
-            <button id="grid">⏹️Grid</button>
-            <button id="list">📄List</button>
+            <button class="menu-buttons" id="grid">⏹️ Grid</button>
+            <button class="menu-buttons" id="list">📄 List</button>
         </div>
         <hr>
         <article class="grid" id="activity-cards"></article>
