--- a/final_project/index.html
+++ b/final_project/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Kanit:wght@100;300;400&display=swap"
@@ -46,7 +47,7 @@
                     <ul class="navigation">
                         <li><a href="#" class="active" title="home">Home</a></li>
                         <li><a href="activities.html" title="activities">Activities</a></li>
-                        <li><a href="" title="discover">Discover</a></li>
+                        <li><a href="join.html" title="join group">Join Group</a></li>
                     </ul>
                 </nav>
             </div>
