--- a/final_project/thankyou.html
+++ b/final_project/thankyou.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 231 Pioneer Park Final Project - Activities Page">
-    <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I, Pioneer Park">
+    <meta name="description" content="WDD 231 Pioneer Park Final Project - Thank You Page">
+    <meta name="keywords" content="Thank You, Michael, Anderson, WDD 231, Web Frontend Development I, Pioneer Park">
     <meta name="author" content="Michael Anderson">
-    <title>Pioneer Park | Activities</title>
+    <title>Successfully Joined</title>
     <!-- Social Media Meta Tags -->
-    <meta property="og:title" content="WDD 231 - Final Project| Pioneer Park | - Activities - Michael Anderson">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/final_project/images/thumbnail.webp">
-    <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/final_project/activities.html">
-    <meta name="twitter:card" content="summary_large_image">
     <!--Styles Links-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/join.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Kanit:wght@100;300;400&display=swap"
@@ -27,7 +23,7 @@
     <!--Script Links-->
     <script defer src="scripts/header.js"></script>
     <script defer src="scripts/footer.js"></script>
-    <script src="scripts/activities.js" type="module"></script>
+    <script defer src="scripts/thanks.js"></script>
 
 </head>
 
@@ -43,9 +39,9 @@
             <div class="navbar">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="index.html" title="home">Home</a></li>
-                        <li><a href="activities.html" class="active" title="activities">Activities</a></li>
-                        <li><a href="" title="discover">Discover</a></li>
+                        <li><a href="#" class="active" title="home">Home</a></li>
+                        <li><a href="activities.html" title="activities">Activities</a></li>
+                        <li><a href="join.html" title="join group">Join Group</a></li>
                     </ul>
                 </nav>
             </div>
@@ -53,12 +49,8 @@
     </header>
 
     <main>
-        <div class="buttons-container">
-            <button class="menu-buttons" id="grid">⏹️ Grid</button>
-            <button class="menu-buttons" id="list">📄 List</button>
-        </div>
-        <hr>
-        <article class="grid" id="activity-cards"></article>
+        <h1>Successfully Joined!</h1>
+        <div id="results" class="results"></div>
     </main>
 
     <footer>
