--- a/final_project/activities.html
+++ b/final_project/activities.html
@@ -45,7 +45,7 @@
                     <ul class="navigation">
                         <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="activities.html" class="active" title="activities">Activities</a></li>
-                        <li><a href="" title="discover">Discover</a></li>
+                        <li><a href="join.html" title="discover">Join Group</a></li>
                     </ul>
                 </nav>
             </div>
