--- a/final_project/join.html
+++ b/final_project/join.html
@@ -44,9 +44,9 @@
             <div class="navbar">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="#" class="active" title="home">Home</a></li>
+                        <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="activities.html" title="activities">Activities</a></li>
-                        <li><a href="join.html" title="join group">Join Group</a></li>
+                        <li><a href="join.html" class="active" title="join group">Join Group</a></li>
                     </ul>
                 </nav>
             </div>
